src/index.css
/* General */

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #2E3440;
    color: #ECEFF4;
    font-family: "IBM Plex Sans", serif;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    min-height: 100vh;
    overflow-y: auto;
    scrollbar-gutter: stable !important;
}

h1, h2, h3, h4 {
    font-weight: lighter;
}

h1, h2 {
    text-transform: uppercase;
    display: block;
}

h1 {
    color: #8FBCBB;
    font-size: 2rem;
}

h2 {
    color: #88C0D0;
    font-size: 1.7rem;
}

h3 {
    color: #81A1C1;
    font-size: 1.5rem;
}

h4 {
    color: #5E81AC;
    font-size: 1.3rem;
}

hr {
    border: none;
    height: 2px;
    background-color: #3B4252;
}

p {
    font-size: 1.1em;
}

a, Link {
    color: #A3BE8C;
    text-decoration: None;
    font-weight: 450;
    display: inline;
}

a:hover {
    color: #EBCB8B;
}

::selection {
    background: #B48EAD;
}

button.base-button {

}

button.secondary-button {

}

.clear { clear:both; }

/* Main */

.main-container {
    padding: 20px;
}


.gutters{
    margin: 20px 6%;
}

p.growing-hover {


}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

img {
    border-radius: 1em;
    width: 100%;
    box-shadow: 6px 6px 12px 2px #00000033;
}

.home-images {
    padding-right: 6px;
    padding-top: 12px;
}

.socials-link {
    display: inline;
}

.socials-img {
    display: inline;
    width: 3em;
    fill: #A3BE8C;
    margin-right: 12px;
}
.socials-img:hover {
    fill: #EBCB8B;
}


.responsive-accordion-buttons {
    padding: 2px 1px 1px 1px;
    margin-left: 0px;
    border-radius: 4px;
    box-shadow: 0 1px 12px 1px #00000033;
    align-items: flex-end;
}

/* Nav */

header{
    overflow:hidden;
    background-color:#3B4252;
    box-shadow: 0 1px 12px 1px #00000033;
    height: 80px;
}

nav {
    margin-right:4%;
}

nav ul {
    height: 80px;
    list-style: none;
    display: flex;
    justify-content: flex-end;
    margin: 0;
    padding: 0;
}

nav li {
    height: 50px;
    font-size: 1.2rem;
    padding: 44px 20px;
}

nav a, nav Link {
    height: 100%;
    text-decoration: none;
    display: flex;
    align-items: center;

}

li {
    font-size: 1.1em;
}

nav li:first-child{
    margin-right: auto;
    padding: 40px 40px;
    /* First Child stylesheets here*/

}

/** Styles for the responsive elements **/
.responsive-nav {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 999;
    background-color: #3B4252;
    box-shadow: -10px 0 12px #00000033;
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    padding-left: 1em;
}

#nav-close-button {
    padding-left: 16px;
}

.responsive-nav li, .responsive-nav a, .responsive-nav Link {
    width: 100%;
}

.hamburger {
    padding-top: 38px;
}

.close-hamburger {

}

.nav-button-svg {
    box-shadow: 3px 4px 5px 6px #000;
}

/* Cards */
div.card-container {
    border-radius: 1em;
    padding: 2em;
    margin: 1em 1em 1em 0;
    box-shadow: 10px 0 20px #00000033;
    border: 10px black;
    background-color: rgba(0,0,0,0.02);
}

/* Scroll bar */
::-webkit-scrollbar {
    width: 60px;
}

::-webkit-scrollbar {
    background-color: rgba(0, 0, 0, 0);
}

::-webkit-scrollbar-thumb {
    background-color: #242834;
    border-radius: 1em;
}

/* Background */

.background-layer {
    overflow: hidden;
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: -1;
    width: 100%;
}


#website-title{
    text-transform: uppercase;
    float:left;
    padding: 1rem;
    margin-left: 4%;
    font-weight: lighter;
    color: #8FBCBB;
    font-size: 2rem;
    white-space: nowrap;
}


/* Media */

/* Tablets */
@media(max-width: 834px){
    .mobile-hide {
        display: none;
    }
    .background-svg-toggle-big {
        display: none;
    }
    .background-svg-toggle-small {
        display: block;
    }
}

/* Small Devices */
@media(max-width: 500px){
    .responsive-nav {
        width: 100%;
    }
}

/* Desktop */
@media(min-width: 835px) {
    .hamburger {
        display: none;
    }
    .background-svg-toggle-big {
        display: block;
    }
    .background-svg-toggle-small {
        display: none;
    }
    .card-container {
        margin-left: 0;
        margin-right: 0;
    }
}

